src/content/docs/versions/http-api/0.5.x/inputs/whip.mdx
---
title: WHIP server
slug: http-api/0.5.x/http-api/inputs/whip
---

import { Aside, Badge } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

An input type that provides a WHIP server endpoint. It allows you to stream media to the Smelter.

Smelter exposes WHIP endpoint on port 9000 under `/whip/:input_id` route. A different port can be
configured with [`SMELTER_WHIP_WHEP_SERVER_PORT`](/deployment/configuration#smelter_whip_whep_server_port).

To connect new input, register it first with [`register-input` request](/http-api/0.5.x/routes#register-input)
and then establish WHIP connection.

The `bearer token` will be returned as response to the input registration.

## Usage

To use WHIP Input you must register it first. You can do it by sending a request like this:

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/input/:input_id/register
  Content-Type: application/json

  {
    "type": "whip_server",
    "video": {
      "decoder_preferences": ["ffmpeg_h264", "any"]
    }
  }
  ```
</CollapsibleDetails>

<Aside>
  In the following example, both the audio and video will be used if the source provides audio and video tracks:

  ```http
  POST: /api/input/:input_id/register
  Content-Type: application/json

  {
    "type": "whip_server"
  }
  ```
</Aside>

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type WhipServer = {
    type: "whip_server";
    video?: VideoOptions;
    bearer_token?: string;
    required?: bool;
    offset_ms?: f64;
  };
  ```
</CollapsibleDetails>

Parameters for registering an WHIP endpoint as an input.

## Properties

### video

Parameters of a video source included in the WHIP stream.

* **Type**: [`VideoOptions`](#videooptions)

***

### bearer\_token

Authentication token. If not provided, a random token
will be generated and returned in the response body.

* **Type**: `string`

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `bool`
* **Default value**: `false`

***

### offset\_ms

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `f64`

## VideoOptions

Parameters of a video source included in the WHIP stream.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoOptions = {
      decoder_preferences?: VideoDecoder[];
  };
  ```
</CollapsibleDetails>

### Properties

#### decoder\_preferences

An ordered list of preferred video decoders. The first element in the list has the highest priority during WHIP negotiation.

* **Type**: [`VideoDecoder`](#videodecoder)\[]
* **Default value**: `[ "any" ]`

Behavior:

* If the list ends with "any":
  * Smelter will first try the decoders explicitly listed (in order) and use the first one that is supported and negotiated in WHIP signaling.
  * If none of the listed decoders are supported, Smelter will fall back to any supported codec from the negotiated list that wasn’t already in the preferences.

* If "any" is not included:
  * Only the decoders listed will be considered.
  * If none are supported, no fallback will occur.

## VideoDecoder

Video decoder type.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoDecoder =
    | "ffmpeg_h264"
    | "ffmpeg_vp8"
    | "ffmpeg_vp9"
    | "vulkan_h264"
    | "any";
  ```
</CollapsibleDetails>

* **Type**: "ffmpeg\_h264" | "ffmpeg\_vp8" | "ffmpeg\_vp9" | "vulkan\_h264" | "any"
* **Supported values**:
  * `"ffmpeg_h264"` - Software H264 decoder based on FFmpeg.
  * `"vulkan_h264"` (<Badge text="Required feature: vk-video" variant="note" />) - Hardware decoder. Requires GPU that supports Vulkan Video decoding.
  * `"ffmpeg_vp8"` - Software VP8 decoder based on FFmpeg.
  * `"ffmpeg_vp9"` - Software VP9 decoder based on FFmpeg.
  * `"any"` - Automatically selects any video decoder supported by Smelter.
